salesforce-main/src/main/default/objects/Case/fields/Query_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Query_Subtype__c</fullName>
    <label>Query Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Query_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Authorised Leave</fullName>
            </value>
            <value>
                <fullName>How do I access my EBook?</fullName>
            </value>
            <value>
                <fullName>How do I access my results and feedback</fullName>
            </value>
            <value>
                <fullName>How do I collect my ID card?</fullName>
            </value>
            <value>
                <fullName>I&apos;m having technical issues preventing me from accessing my e-materials</fullName>
            </value>
            <value>
                <fullName>I&apos;m having technical issues preventing me from studying</fullName>
            </value>
            <value>
                <fullName>I am in financial difficulty, what are my options?</fullName>
            </value>
            <value>
                <fullName>I am on Interruption of Studies and wish to extend</fullName>
            </value>
            <value>
                <fullName>I am taking an interruption of studies, how does that affect my payment plan and fees?</fullName>
            </value>
            <value>
                <fullName>I can&apos;t access my forum</fullName>
            </value>
            <value>
                <fullName>I can’t see my course within my online learning platform</fullName>
            </value>
            <value>
                <fullName>I have a different problem with my online learning</fullName>
            </value>
            <value>
                <fullName>I have a query about applying for Post Study Work/Graduate Route Visa</fullName>
            </value>
            <value>
                <fullName>I have a query about exemptions</fullName>
            </value>
            <value>
                <fullName>I have a query about inviting visitors to the UK</fullName>
            </value>
            <value>
                <fullName>I have a query about my attendance</fullName>
            </value>
            <value>
                <fullName>I have a query about my balance</fullName>
            </value>
            <value>
                <fullName>I have a query about my End Point Assessment</fullName>
            </value>
            <value>
                <fullName>I have a query about my submission</fullName>
            </value>
            <value>
                <fullName>I have a query about my timetable</fullName>
            </value>
            <value>
                <fullName>I have a question about my assessments feedback</fullName>
            </value>
            <value>
                <fullName>I have a question about my exam arrangements</fullName>
            </value>
            <value>
                <fullName>I have a question about my exam learning support</fullName>
            </value>
            <value>
                <fullName>I have a question about my graduation ceremony</fullName>
            </value>
            <value>
                <fullName>I have a question about my mock/assessment</fullName>
            </value>
            <value>
                <fullName>I have a question about my Oyster card</fullName>
            </value>
            <value>
                <fullName>I have a question about my results</fullName>
            </value>
            <value>
                <fullName>I have a question about my review/gate-way call</fullName>
            </value>
            <value>
                <fullName>I have a question about my student loan</fullName>
            </value>
            <value>
                <fullName>I have a question about my term dates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>