salesforce-main/src/main/default/objects/Case/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assessments</fullName>
            </value>
            <value>
                <fullName>Attendance</fullName>
            </value>
            <value>
                <fullName>Book an Appointment</fullName>
            </value>
            <value>
                <fullName>Changes to personal details</fullName>
            </value>
            <value>
                <fullName>Changes to studies</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Finance and Billing</fullName>
            </value>
            <value>
                <fullName>Graduation and Certificates</fullName>
            </value>
            <value>
                <fullName>IoS (Interruption of Studies)</fullName>
            </value>
            <value>
                <fullName>Letter requests</fullName>
            </value>
            <value>
                <fullName>My Apprenticeship</fullName>
            </value>
            <value>
                <fullName>My Course</fullName>
            </value>
            <value>
                <fullName>My Online Learning and The HUB</fullName>
            </value>
            <value>
                <fullName>My Study Materials</fullName>
            </value>
            <value>
                <fullName>Online learning</fullName>
            </value>
            <value>
                <fullName>Registration and enrolment</fullName>
            </value>
            <value>
                <fullName>Review Meeting</fullName>
            </value>
            <value>
                <fullName>Student Finance</fullName>
            </value>
            <value>
                <fullName>Student Loans</fullName>
            </value>
            <value>
                <fullName>Timetables</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>General Query</fullName>
            </value>
            <value>
                <fullName>Undetermined Query</fullName>
            </value>
            <value>
                <fullName>Prior Learning/Exemptions information</fullName>
            </value>
            <value>
                <fullName>Additional Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>