salesforce-main/src/main/default/objects/Case/fields/Record_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Record_Assignment__c</fullName>
    <description>Should this user be included in round robin record distribution?  Not all departments use this function; select N/A if this is not relevant.</description>
    <inlineHelpText>Should this user be included in round robin record distribution?  Not all departments use this function; select N/A if this is not relevant.</inlineHelpText>
    <label>Record Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>