salesforce-main/src/main/default/objects/Case/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Release object; used to associate backlog item with a release for planning and release notes.</description>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Backlog Items</relationshipLabel>
    <relationshipName>Backlog</relationshipName>
    <type>Lookup</type>
</CustomField>