salesforce-main/src/main/default/objects/Case/fields/Release_Type__c.field-meta.xml
<CustomField>
    <fullName>Release_Type__c</fullName>
    <description>Method in which this particular backlog item has been implemented:
BAU (Business as Usual) - no prior approval
SIR (Salesforce Immediate Release) - approved immediate release
Packaged Release - promoted within a normal release window</description>
    <inlineHelpText>Refers to the type of change made to the production instance.
None - No changes released into production for this item.
BAU - No prior approval required (notifies dev &amp; qa)
SIR - Approved immediate release
Packaged Release - Normal release conditions</inlineHelpText>
    <label>Release Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>BAU</fullName>
            </value>
            <value>
                <fullName>SIR</fullName>
            </value>
            <value>
                <fullName>Packaged Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>