salesforce-main/src/main/default/objects/Case/fields/Requesting_User__c.field-meta.xml
<CustomField>
    <fullName>Requesting_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this case is on behalf of another user please fill in their details.</description>
    <inlineHelpText>If this case is on behalf of another user please fill in their details.</inlineHelpText>
    <label>Requesting User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>