salesforce-main/src/main/default/objects/Case/fields/Requesting_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Requesting_User_Email__c</fullName>
    <description>Formula to display the requesting user&apos;s email address.</description>
    <formula>HYPERLINK(&quot;mailto:&quot;&amp;Requesting_User__r.Email, Requesting_User__r.Email)</formula>
    <label>Requesting User Email</label>
    <type>Text</type>
</CustomField>