salesforce-main/src/main/default/objects/Case/fields/Requesting_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Requesting_User_Profile__c</fullName>
    <description>Formula to display the requesting user&apos;s profile.</description>
    <formula>Requesting_User__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requesting User Profile</label>
    <type>Text</type>
</CustomField>