salesforce-main/src/main/default/objects/Case/fields/Requesting_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Requesting_User_Role__c</fullName>
    <description>Formula to display the requesting user&apos;s role.</description>
    <formula>Requesting_User__r.UserRole.Name</formula>
    <label>Requesting User Role</label>
    <type>Text</type>
</CustomField>