salesforce-main/src/main/default/objects/Case/fields/SIS_Error_ID__c.field-meta.xml
<CustomField>
    <fullName>SIS_Error_ID__c</fullName>
    <externalId>true</externalId>
    <label>SIS Error ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>