salesforce-main/src/main/default/objects/Case/fields/SIS_Event_Time__c.field-meta.xml
<CustomField>
    <fullName>SIS_Event_Time__c</fullName>
    <label>Event Time</label>
    <type>DateTime</type>
</CustomField>