salesforce-main/src/main/default/objects/Case/fields/SIS_Source_App__c.field-meta.xml
<CustomField>
    <fullName>SIS_Source_App__c</fullName>
    <label>Source App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>