salesforce-main/src/main/default/objects/Case/fields/SIS_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>SIS_Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>