salesforce-main/src/main/default/objects/Case/fields/SLA_Flag__c.field-meta.xml
<CustomField>
    <fullName>SLA_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field will get update if the case status is New after 5 minutes from the case creation.</description>
    <label>5mins Flag</label>
    <type>Checkbox</type>
</CustomField>