salesforce-main/src/main/default/objects/Case/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Indicates the changes or actions were taken to resolve this backlog item.</description>
    <label>Solution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>