salesforce-main/src/main/default/objects/Case/fields/Sponsor_Sponsor_Number__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Sponsor_Number__c</fullName>
    <description>This field is used to store the Sponsor/Sponsor Number</description>
    <label>Sponsor/Sponsor Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>