salesforce-main/src/main/default/objects/Case/fields/Status_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Status_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Letter Sent</label>
    <type>Checkbox</type>
</CustomField>