salesforce-main/src/main/default/objects/Case/fields/Student_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_ID_Number__c</fullName>
    <label>Student ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>