salesforce-main/src/main/default/objects/Case/fields/Study_Location__c.field-meta.xml
<CustomField>
    <fullName>Study_Location__c</fullName>
    <label>Study Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Doncaster</fullName>
            </value>
            <value>
                <fullName>Leeds</fullName>
            </value>
            <value>
                <fullName>London (City)</fullName>
            </value>
            <value>
                <fullName>London (Holborn)</fullName>
            </value>
            <value>
                <fullName>London (Kings Cross)</fullName>
            </value>
            <value>
                <fullName>London (Portsoken)</fullName>
            </value>
            <value>
                <fullName>London (Shepherd&apos;s Bush)</fullName>
            </value>
            <value>
                <fullName>London (Waterloo)</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>