salesforce-main/src/main/default/objects/Case/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>This field contains the values for Sub Status Picklist values based on the Status.</description>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Documentation</fullName>
            </value>
            <value>
                <fullName>External Review Requested</fullName>
            </value>
            <value>
                <fullName>Awaiting Student Response</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
            </value>
            <value>
                <fullName>Formal Complaint</fullName>
            </value>
            <value>
                <fullName>Disciplinary</fullName>
            </value>
            <value>
                <fullName>Does not meet case criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>