salesforce-main/src/main/default/objects/Case/fields/Supplied_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplied_First_Name__c</fullName>
    <description>To store the First Name provided in RFI</description>
    <label>Supplied First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>