salesforce-main/src/main/default/objects/Case/fields/Supplied_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Last_Name__c</fullName>
    <description>To store the Last Name provided in RFI</description>
    <label>Supplied Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>