salesforce-main/src/main/default/objects/Case/fields/Supplied_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Phone_Number__c</fullName>
    <description>To store the Phone Number provided in RFI</description>
    <label>Supplied Phone Number</label>
    <type>Phone</type>
</CustomField>