salesforce-main/src/main/default/objects/Case/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Field to specify the student term</description>
    <label>Term</label>
    <length>60</length>
    <type>Text</type>
</CustomField>