salesforce-main/src/main/default/objects/Case/fields/Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Thread_Id__c</fullName>
    <description>Case Thread Id to be used in Apex coding for status and bank letters</description>
    <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT( $Organization.Id ,10), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thread Id</label>
    <type>Text</type>
</CustomField>