salesforce-main/src/main/default/objects/Case/fields/Total_time_spent_open__c.field-meta.xml
<CustomField>
    <fullName>Total_time_spent_open__c</fullName>
    <formula>(ClosedDate -  CreatedDate) * 1440</formula>
    <label>Total time spent open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>