salesforce-main/src/main/default/objects/Case/fields/Training_Manager__c.field-meta.xml
<CustomField>
    <fullName>Training_Manager__c</fullName>
    <description>This field contains the Training Manager name of the Student</description>
    <label>Training Manager</label>
    <length>60</length>
    <type>Text</type>
</CustomField>