salesforce-main/src/main/default/objects/Case/fields/Urgent__c.field-meta.xml
<CustomField>
    <fullName>Urgent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag to indicate the urgency of the case.</description>
    <label>Urgent</label>
    <type>Checkbox</type>
</CustomField>