salesforce-main/src/main/default/objects/Case/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <formula>HYPERLINK(&quot;mailto:&quot;&amp;CreatedBy.Email,  CreatedBy.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Email</label>
    <type>Text</type>
</CustomField>