salesforce-main/src/main/default/objects/Case/fields/User_Login_Access__c.field-meta.xml
<CustomField>
    <fullName>User_Login_Access__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Replaced with Requesting User

For use to fire email if user filing the case does not have login admin access.</description>
    <label>[REMOVE] User Login Access</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>