salesforce-main/src/main/default/objects/Case/recordTypes/Apprentice_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Apprentice_Onboarding</fullName>
    <active>true</active>
    <businessProcess>Apprentice Onboarding</businessProcess>
    <description>Case management for apprenticeship onboarding</description>
    <label>Apprentice Onboarding</label>
</RecordType>