salesforce-main/src/main/default/objects/Case/recordTypes/Backlog.recordType-meta.xml
<RecordType>
    <fullName>Backlog</fullName>
    <active>false</active>
    <businessProcess>Backlog</businessProcess>
    <description>Used to manage Salesforce team backlog.  Use only for components packaged for release.</description>
    <label>Backlog</label>
</RecordType>