salesforce-main/src/main/default/objects/Case/recordTypes/Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>Customer_Service</fullName>
    <active>true</active>
    <businessProcess>Customer Services</businessProcess>
    <label>Customer Service</label>
</RecordType>