salesforce-main/src/main/default/objects/Case/recordTypes/SIS_Error_Escalations.recordType-meta.xml
<RecordType>
    <fullName>SIS_Error_Escalations</fullName>
    <active>false</active>
    <businessProcess>SIS Error Escalations</businessProcess>
    <label>SIS Error Escalations</label>
</RecordType>