salesforce-main/src/main/default/objects/Case/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>false</active>
    <businessProcess>Standard</businessProcess>
    <description>For all support issues and feature requests initiated by end users.</description>
    <label>Standard</label>
</RecordType>