salesforce-main/src/main/default/objects/Case/recordTypes/Student_Query.recordType-meta.xml
<RecordType>
    <fullName>Student_Query</fullName>
    <active>true</active>
    <businessProcess>Student Queries</businessProcess>
    <description>Case management for queries initiated by students.</description>
    <label>Student Query</label>
</RecordType>