salesforce-main/src/main/default/objects/Case/recordTypes/SyncBatch_Escalation.recordType-meta.xml
<RecordType>
    <fullName>SyncBatch_Escalation</fullName>
    <active>false</active>
    <businessProcess>SyncBatch Escalations</businessProcess>
    <description>This is the record type for all SyncBatch error cases.</description>
    <label>SyncBatch Escalation</label>
</RecordType>