salesforce-main/src/main/default/objects/Case/validationRules/Case_CS_Internal_department.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_CS_Internal_department</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Customer_Service&quot;,
DATEVALUE(CreatedDate) &gt;=  date(2020,02,25),
ISPICKVAL( Status, &quot;In Progress&quot;),
ISBLANK(TEXT(Internal_department__c))
)</errorConditionFormula>
    <errorDisplayField>Internal_department__c</errorDisplayField>
    <errorMessage>Please select Internal Department for In Progress status</errorMessage>
</ValidationRule>