salesforce-main/src/main/default/objects/Case/validationRules/Confidential_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Confidential_Check</fullName>
    <active>true</active>
    <description>This validation rule is used to check whether the checked confidential is being unchecked</description>
    <errorConditionFormula>AND(
   PRIORVALUE(Confidential__c)= true,
      Confidential__c != true,
        $Profile.Name =&apos;Cloud Support Specialist&apos;,
           Not(IsClosed))</errorConditionFormula>
    <errorMessage>Once Confidential is checked, it cannot be unchecked</errorMessage>
</ValidationRule>