salesforce-main/src/main/default/objects/Case/validationRules/Escalate_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Escalate_check</fullName>
    <active>true</active>
    <description>This validation rule is used to check whether the checked escalated is being unchecked</description>
    <errorConditionFormula>AND(AND(PRIORVALUE (IsEscalated) = true, IsEscalated != true), 
         $Profile.Name = &apos;Cloud Support Specialist&apos;, not(IsClosed) )</errorConditionFormula>
    <errorMessage>Once Escalated is checked, it cannot be unchecked</errorMessage>
</ValidationRule>