salesforce-main/src/main/default/objects/Case/validationRules/External_Handover_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>External_Handover_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Customer_Service&quot;,
DATEVALUE(CreatedDate) &gt;= date(2020,10,23),
ISPICKVAL( Status, &quot;External Handover&quot;),
ISBLANK(TEXT(CS_External_Handover_Department__c))
)</errorConditionFormula>
    <errorDisplayField>CS_External_Handover_Department__c</errorDisplayField>
    <errorMessage>Please select External Department for External Handover status</errorMessage>
</ValidationRule>