salesforce-main/src/main/default/objects/Case/validationRules/Flags_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Flags_check</fullName>
    <active>true</active>
    <description>This validation rule is used to check whether the confidential, Escalate, Urgent flags are  changed once the case is closed.</description>
    <errorConditionFormula>AND(
    OR($Profile.Name =&apos;Cloud Support Specialist&apos;,
          $Profile.Name =&apos;Cloud Support Manager&apos;),
    OR( PRIORVALUE(Urgent__c) != Urgent__c,
          PRIORVALUE(IsEscalated) != IsEscalated, 
            PRIORVALUE(Confidential__c) != Confidential__c),
    ISPICKVAL(Status,&apos;Closed&apos;))</errorConditionFormula>
    <errorMessage>Once Case is closed, Flags cannot be changed.</errorMessage>
</ValidationRule>