salesforce-main/src/main/default/objects/Case/validationRules/Prevent_comment_creation_on_Closed_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_comment_creation_on_Closed_Case</fullName>
    <active>true</active>
    <description>This rule will not allow Integration User to add case comment once the case is closed.</description>
    <errorConditionFormula>AND(IsCaseClosed__c  = true,$Profile.Name = &apos;System Integration&apos;)</errorConditionFormula>
    <errorMessage>You cannot add the comment since case is closed</errorMessage>
</ValidationRule>