salesforce-main/src/main/default/objects/Case/validationRules/Query_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Query_Type_Required</fullName>
    <active>true</active>
    <description>The case should not be created without a query type.</description>
    <errorConditionFormula>AND(
$Setup.ValidationSettings__c.Case_Query_Type_Required__c = False,
RecordType.DeveloperName = &quot;Student_Query&quot; || RecordType.DeveloperName = &quot;Customer_Service&quot;,
ISBLANK(TEXT(Query_Type__c)))</errorConditionFormula>
    <errorDisplayField>Query_Type__c</errorDisplayField>
    <errorMessage>This case record must contain a query type. Please select one of the available options and try again.</errorMessage>
</ValidationRule>