salesforce-main/src/main/default/objects/Case/validationRules/Status_cannot_be_changed_to_New.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_cannot_be_changed_to_New</fullName>
    <active>true</active>
    <description>This validation rule is used to ensure that the case cannot be returned to New once opened or closed.</description>
    <errorConditionFormula>AND(

    NOT(RecordType.DeveloperName = &quot;Customer_Service&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status),&quot;New&quot;)) , 
    ISPICKVAL(Status,&apos;New&apos;),
    NOT(ISPICKVAL(PRIORVALUE(Status),&quot;Closed&quot;))
   )</errorConditionFormula>
    <errorMessage>You cannot change the status to New.</errorMessage>
</ValidationRule>