salesforce-main/src/main/default/objects/Case/validationRules/Status_cannot_be_Reopened.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_cannot_be_Reopened</fullName>
    <active>false</active>
    <description>This validation rule is used to check whether the case is reopened.</description>
    <errorConditionFormula>AND(
      PRIORVALUE(IsClosed) = true ,
      NOT(ISPICKVAL(Status,&apos;Closed&apos;))
      )</errorConditionFormula>
    <errorMessage>You cannot reopen the closed case.</errorMessage>
</ValidationRule>